# Haskell-Sudoku

./: README.md  Review.docx  benchmark.html  sudoku.cabal  sudoku.txt
Queues/: Dequeue.hs  List.hs  Queue.hs  Test.hs
app/: Main.hs
doc/: doc-index.html  index-frames.html  index.html
doc/sudoku-0.1.0.0/: Benchmarks.html  Board-List.html  Board-Vector.html  ProjectEuler.html  SimpleSolve.html  Square-Maybe.html  Square-Simple.html  SudokuAbstract.html  Value-Char.html  Value-Data.html  Value-Int.html  Value-Integer.html  doc-index.html  index-frames.html  index.html  mini_Benchmarks.html  mini_Board-List.html  mini_Board-Vector.html  mini_ProjectEuler.html  mini_SimpleSolve.html  mini_Square-Maybe.html  mini_Square-Simple.html  mini_SudokuAbstract.html  mini_Value-Char.html  mini_Value-Data.html  mini_Value-Int.html  mini_Value-Integer.html  sudoku.haddock  sudoku.txt
doc/sudoku-0.1.0.0/src/: Benchmarks.html  Board.List.html  Board.Vector.html  ProjectEuler.html  SimpleSolve.html  Square.Maybe.html  Square.Simple.html  SudokuAbstract.html  Value.Char.html  Value.Data.html  Value.Int.html  Value.Integer.html
src/: Benchmarks.hs  ProjectEuler.hs  SimpleSolve.hs  Sudoku.hs  SudokuAbstract.hs
src/Board/: List.hs  Vector.hs
src/Square/: Maybe.hs  Simple.hs
src/Value/: Char.hs  Data.hs  Int.hs  Integer.hs
test/: Spec.hs
