name:                sudoku
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Solpatium/Haskell-Sudoku
license:             BSD3
license-file:        LICENSE
author:              Jakub Ptak, Wiesław Stanek
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Benchmarks,
                       Value.Data,
                       Value.Int,
                       Value.Integer,
                       Value.Char,
                       Board.List,
                       Board.Vector,
                       Square.Maybe,
                       Square.Simple,
                       SimpleSolve,
                       SudokuAbstract,
                       ProjectEuler
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , criterion
                     , deepseq
  default-language:    Haskell2010

executable sudoku-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sudoku
  default-language:    Haskell2010

test-suite sudoku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sudoku
                     , HUnit
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Solpatium/Haskell-Sudoku
